restructure controllers and templates using Papa style

--- a/tsunami_app/www/templates/tab-maps.html
+++ b/tsunami_app/www/templates/tab-maps.html
@@ -1,5 +1,6 @@
-<ion-view view-title="Dashboard">
+<ion-view view-title="Maps">
   <ion-content class="padding">
+    {{vm.mapTest}}
     <div class="list card">
       <div class="item item-divider">Recent Updates</div>
       <div class="item item-body">
