--- a/tsunami_app/www/templates/tabs.html
+++ b/tsunami_app/www/templates/tabs.html
@@ -6,19 +6,19 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- Maps Tab -->
-  <ion-tab title="Maps" icon-off="ion-ios-navigate-outline" icon-on="ion-ios-navigate" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <ion-tab title="Maps" icon-off="ion-ios-navigate-outline" icon-on="ion-ios-navigate" href="#/tab/maps">
+    <ion-nav-view name="tab-maps"></ion-nav-view>
   </ion-tab>
 
   <!-- My Info Tab -->
-  <ion-tab title="My Info" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <ion-tab title="My Info" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" href="#/tab/info">
+    <ion-nav-view name="tab-info"></ion-nav-view>
   </ion-tab>
 
 
-  <!-- About Tab -->
-  <ion-tab title="About" icon-off="ion-ios-information-outline" icon-on="ion-ios-information" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <!-- Prepare Tab -->
+  <ion-tab title="Prepare" icon-off="ion-ios-information-outline" icon-on="ion-ios-information" href="#/tab/prepare">
+    <ion-nav-view name="tab-about"></ion-nav-view>
   </ion-tab>
 
 
