--- a/tsunami_app/www/templates/tab-prepare.html
+++ b/tsunami_app/www/templates/tab-prepare.html
@@ -1,10 +1,10 @@
 <ion-view view-title="Prepare">
   <ion-content>
-    <ion-list>
+    <!-- <ion-list> -->
     <!-- <ion-toggle  ng-model="settings.enableFriends"> -->
-        Enable Friends
+        Tessst
         {{vm.prepareTest}}
     <!-- </ion-toggle> -->
-    </ion-list>
+    <!-- </ion-list> -->
   </ion-content>
 </ion-view>
