--- a/tsunami_app/www/templates/tab-info.html
+++ b/tsunami_app/www/templates/tab-info.html
@@ -1,6 +1,7 @@
 <ion-view view-title="Info">
   <ion-content>
     <ion-list>
+    Tessst
     {{vm.infoTest}}
       <!-- <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
         <img ng-src="{{chat.face}}">
