--- a/tsunami_app/www/templates/tabs.html
+++ b/tsunami_app/www/templates/tabs.html
@@ -1,9 +1,9 @@
-<!--
-Create tabs with an icon and label, using the tabs-positive style.
-Each tab's child <ion-nav-view> directive will have its own
-navigation history that also transitions its views in and out.
--->
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-nav-bar class="bar-stable">
+  <ion-nav-back-button>
+  </ion-nav-back-button>
+</ion-nav-bar>
+
+<ion-tabs class="tabs-icon-top tabs-positive tabs-color-light tabs-background-balanced">
 
   <!-- Maps Tab -->
   <ion-tab title="Maps" icon-off="ion-ios-navigate-outline" icon-on="ion-ios-navigate" href="#/tab/maps">
@@ -18,7 +18,7 @@ navigation history that also transitions its views in and out.
 
   <!-- Prepare Tab -->
   <ion-tab title="Prepare" icon-off="ion-ios-information-outline" icon-on="ion-ios-information" href="#/tab/prepare">
-    <ion-nav-view name="tab-about"></ion-nav-view>
+    <ion-nav-view name="tab-prepare"></ion-nav-view>
   </ion-tab>
 
 
