clean out dead code

--- a/tsunami_app/www/templates/login.html
+++ b/tsunami_app/www/templates/login.html
@@ -1,5 +1,5 @@
 <div id="login">
-  <h1>Welcome!{{vm.test}}</h1>
+  <h1>Welcome!</h1>
   <p>Don't have an account? Sign Up!</p>
   <div class="list list-inset">
     <label class="item item-input">
