basic foundation for views

--- a/tsunami_app/scss/ionic.app.scss
+++ b/tsunami_app/scss/ionic.app.scss
@@ -43,3 +43,6 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
   margin-top: 30px;
   margin-bottom: 30px;
 }
+strong {
+  text-transform: uppercase;
+}
