--- a/tsunami_app/www/templates/map-detail.html
+++ b/tsunami_app/www/templates/map-detail.html
@@ -4,13 +4,9 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-{{vm.mapTest}}
-<!-- <ion-view view-title="{{chat.name}}">
-  <ion-content class="padding">
-    <img ng-src="{{chat.face}}" style="width: 64px; height: 64px">
-    <p>
-      {{chat.lastText}}
-    </p>
-  </ion-content>
+<ion-view view-title="Coronado">
+<!--   <ion-content class="padding">
+ -->  <img src="img/coronado.jpg" alt="">
+  <!-- </ion-content> -->
 </ion-view>
- -->
+
