--- a/tsunami_app/www/templates/tab-info.html
+++ b/tsunami_app/www/templates/tab-info.html
@@ -1,18 +1,18 @@
 <ion-view view-title="Info">
   <ion-content>
     <ion-list>
-    Tessst
-    {{vm.infoTest}}
-      <!-- <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img ng-src="{{chat.face}}">
-        <h2>{{chat.name}}</h2>
-        <p>{{chat.lastText}}</p>
-        <i class="icon ion-chevron-right icon-accessory"></i>
 
-        <ion-option-button class="button-assertive" ng-click="remove(chat)">
-          Delete
-        </ion-option-button>
-      </ion-item> -->
+    <ion-item class="item-icon-left">
+      <i class="icon ion-ios-medkit"></i>
+        <h3>Hospital</h3>
+        <p>{{vm.user.hospital}}</p>
+    </ion-item>
+    <ion-item class="item-icon-left">
+      <i class="icon ion-ios-location"></i>
+        <h3>Meeting Area</h3>
+        <p>{{vm.user.meeting}}</p>
+    </ion-item>
+
     </ion-list>
   </ion-content>
 </ion-view>
