--- a/tsunami_app/www/templates/tab-prepare.html
+++ b/tsunami_app/www/templates/tab-prepare.html
@@ -1,10 +1,18 @@
 <ion-view view-title="Prepare">
   <ion-content>
-    <!-- <ion-list> -->
-    <!-- <ion-toggle  ng-model="settings.enableFriends"> -->
-        Tessst
-        {{vm.prepareTest}}
-    <!-- </ion-toggle> -->
-    <!-- </ion-list> -->
+  <div class="card">
+    <div class="item item-text-wrap">
+      <h1>Don't wait. Plan now.</h1>
+      <p><strong>Mobile phones and the internet may be overwhelmed during an evacuation.</strong> USE TEXTING, CAR RADIO, HAM RADIO AND EMERGENCY RADIO FROM YOUR KIT AS A WAY TO COMMUNICATE.</p>
+      <h1>What is a tsunami?</h1>
+      <p>A tsunami is a series of water surges usually caused by an earthquake beneath the sea floor. Tsunamis may come to our coast from great earthquakes far away, from large earthquakes nearby, and from submarine landslides triggered by strong earthquake shaking. Tsunami waves are unlike normal coastal waves. Tsunamis are more like a fast-moving river in flood stage and can be filled with debris, so it is important to stay out of the water when
+      a tsunami is active.</p>
+      <h2>Two Ways to Know if a Tsunami is Coming</h2>
+      <h3>Natural warnings</h3>
+      <p>Ground shaking from an earthquake, a loud ocean roar, or the water receding unusually far exposing the sea floor are all nature’s warnings that a tsunami may be coming within minutes: go to higher ground or inland immediately.</p>
+      <h3>Official warnings</h3>
+      <p>San Diego has a system for emergency notification in the event of a tsunami. Citizens that reside or are in the inundation zone with a cell phone will be alerted through phone by the Alert San Diego program. People will also be alerted by emergency personnel and through radio and television announcements.</p>
+    </div>
+  </div>
   </ion-content>
 </ion-view>
