--- a/tsunami_app/www/templates/tab-maps.html
+++ b/tsunami_app/www/templates/tab-maps.html
@@ -1,29 +1,19 @@
 <ion-view view-title="Maps">
   <ion-content class="padding">
-    <div class="list card">
-      <div class="item item-divider">Recent Updates</div>
-      <div class="item item-body">
-        <div>
-          {{vm.mapTest}}
-          There is a fire in <b>sector 3</b>
-        </div>
-      </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">Health</div>
-      <div class="item item-body">
-        <div>
-          You ate an apple today!
-        </div>
-      </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">Upcoming</div>
-      <div class="item item-body">
-        <div>
-          You have <b>29</b> meetings on your calendar tomorrow.
-        </div>
-      </div>
-    </div>
+  <ion-list>
+  <p>Hello, {{vm.user.fname}} {{vm.user.lname}}</p>
+    <ion-item>
+      <i class="icon ion-ios-plus-empty balanced"></i>
+      Add a map
+    </ion-item>
+    <ion-item class="item-icon-right" ng-repeat="map in vm.userMaps" href="#/tab/maps/coronado">
+      <h3>{{map.name}}</h3>
+      <p>Coronado, San Diego County</p>
+        <!-- {{map.city}} -->
+        <i class="icon ion-ios-arrow-right balanced"></i>
+      <!-- </a> -->
+    </ion-item>
+  </ion-list>
+
   </ion-content>
 </ion-view>
