--- a/tsunami_app/www/templates/tabs.html
+++ b/tsunami_app/www/templates/tabs.html
@@ -1,4 +1,7 @@
-
+<ion-nav-bar class="bar-stable">
+  <ion-nav-back-button>
+  </ion-nav-back-button>
+</ion-nav-bar>
 
 <ion-tabs class="tabs-icon-top tabs-positive tabs-color-light tabs-background-balanced">
 
