--- a/tsunami_app/www/templates/tab-info.html
+++ b/tsunami_app/www/templates/tab-info.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Info">
   <ion-content>
+    <p>Logged in as {{vm.user.fname}}, not you? <a ui-sref="login">Logout</a></p>
     <ion-list>
-
     <ion-item class="item-icon-left">
       <i class="icon ion-ios-medkit"></i>
         <h3>Hospital</h3>
@@ -14,7 +14,5 @@
     </ion-item>
 
     </ion-list>
-
-    <a ui-sref="login">Logout</a>
   </ion-content>
 </ion-view>
