--- a/tsunami_app/www/templates/map-preview.html
+++ b/tsunami_app/www/templates/map-preview.html
@@ -1,7 +1,8 @@
-<ion-view view-title="Coronado" id="map-preview">
+<ion-view view-title="{{vm.map.name}}" id="map-preview">
 <!--   <ion-content class="padding"> -->
-  <!-- <img src="img/coronado.jpg" alt=""> -->
-  <button class="button button-positive">
+  <!-- <img src="img/coronado_main.svg" alt=""> -->
+  <!-- {{vm.map}} -->
+  <button ng-click="vm.mapTest()" class="button button-positive">
     Add Map
   </button>
   <!-- </ion-content> -->
