--- a/tsunami_app/www/templates/tab-maps.html
+++ b/tsunami_app/www/templates/tab-maps.html
@@ -22,7 +22,7 @@
       <div class="input-label">
         Select a county
       </div>
-      <select>
+      <select ng-model="vm.countyName">
         <option ng-repeat="county in vm.counties">{{county}}</option>
       </select>
     </label>
@@ -30,11 +30,11 @@
       <div class="input-label">
         Select a city
       </div>
-      <select>
+      <select ng-model="vm.cityName">
         <option ng-repeat="city in vm.cities">{{city.name}}</option>
       </select>
     </label>
-<!--     <label class="item item-input item-select">
+<!--     <label ng-if="vm.maps.length > 1" class="item item-input item-select">
       <div class="input-label">
         Select a Map
       </div>
@@ -42,12 +42,11 @@
         <option ng-repeat="map in vm.maps">{{map.name}}</option>
       </select>
     </label> -->
-    <a href="#/tab/maps/preview">
-      <button type="submit" class="button button-positive">
+    <!-- <a href="#/tab/maps/preview"> -->
+      <button type="submit" ng-click="vm.previewMap()" class="button button-positive">
         View Map
       </button>
-    </a>
+    <!-- </a> -->
   </ion-list>
-
   </ion-content>
 </ion-view>
