debugging and update ionic

--- a/www/components/maps/map-detail.html
+++ b/www/components/maps/map-detail.html
@@ -6,7 +6,7 @@
 -->
 <ion-view view-title="Coronado">
 <!--   <ion-content class="padding">
- -->  <img src="img/coronado_main.svg" alt="">
-  <!-- </ion-content> -->
+  <img src="img/coronado_main.svg" alt="">
+  </ion-content> -->
 </ion-view>
 
