--- a/www/components/maps/tab-maps.html
+++ b/www/components/maps/tab-maps.html
@@ -4,7 +4,8 @@
     <ion-item ng-if="vm.userMaps.length < 1">
       <p>You don't have any saved maps!</p>
     </ion-item>
-    <ion-item class="item-icon-right" ng-repeat="map in vm.userMaps" href="#/tab/maps/coronado">
+    <ion-item class="item-icon-right" ng-repeat="map in vm.userMaps">
+    <!-- <ion-item class="item-icon-right" ng-repeat="map in vm.userMaps" href="#/tab/maps/coronado"> -->
       <h3>{{map.name}}</h3>
       <p>Coronado, San Diego County</p>
         <!-- {{map.city}} -->
