update addMap method to semantic naming

--- a/www/components/maps/map-preview.html
+++ b/www/components/maps/map-preview.html
@@ -2,7 +2,7 @@
 <!--   <ion-content class="padding"> -->
   <!-- <img src="img/coronado_main.svg" alt=""> -->
   <!-- {{vm.map}} -->
-  <button ng-click="vm.mapTest()" class="button button-positive">
+  <button ng-click="vm.addMap()" class="button button-positive">
     Add Map
   </button>
   <!-- </ion-content> -->
