change layout of city name and map name

--- a/www/components/maps/tab-maps.html
+++ b/www/components/maps/tab-maps.html
@@ -6,8 +6,8 @@
     </ion-item>
     <ion-item class="item-icon-right" ng-repeat="map in vm.user.maps">
     <!-- <ion-item class="item-icon-right" ng-repeat="map in vm.user.maps" href="#/tab/maps/coronado"> -->
-      <h3>{{map.name}}</h3>
-      <p>Coronado, San Diego County</p>
+      <h3>City {{map.city_id}} - {{map.name}}</h3>
+      <p>San Diego County</p>
         <!-- {{map.city}} -->
         <i class="icon ion-ios-arrow-right balanced"></i>
     </ion-item>
