--- a/www/components/maps/map-detail.html
+++ b/www/components/maps/map-detail.html
@@ -1,12 +1,6 @@
-<!--
-  This template loads for the 'tab.friend-detail' state (app.js)
-  'friend' is a $scope variable created in the FriendsCtrl controller (controllers.js)
-  The FriendsCtrl pulls data from the Friends service (service.js)
-  The Friends service returns an array of friend data
--->
-<ion-view view-title="Coronado">
-<!--   <ion-content class="padding">
-  <img src="img/coronado_main.svg" alt="">
-  </ion-content> -->
+<ion-view view-title="{{vm.map.name}}" id="map-detail">
+  <ion-content>
+
+  </ion-content>
 </ion-view>
 
