show map on click

--- a/www/components/maps/tab-maps.html
+++ b/www/components/maps/tab-maps.html
@@ -4,7 +4,7 @@
     <ion-item ng-if="vm.user.map.length < 1">
       <p>You don't have any saved maps!</p>
     </ion-item>
-    <ion-item class="item-icon-right" ng-repeat="map in vm.user.maps">
+    <ion-item class="item-icon-right" ng-repeat="map in vm.user.maps" ng-click="vm.showMap(map.id)">
     <!-- <ion-item class="item-icon-right" ng-repeat="map in vm.user.maps" href="#/tab/maps/coronado"> -->
       <h3>City {{map.city_id}} - {{map.name}}</h3>
       <p>San Diego County</p>
