--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -53,22 +53,24 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 strong {
   text-transform: uppercase;
 }
+.modal-nav-button {
+  width: 50px;
+}
 #maps {
   background-color: $stable;
 }
 #maps button {
   float: right;
 }
-#map-preview, #map-detail{
-  background-repeat: no-repeat;
-  background-position: top;
-  background-origin: border-box;
-  background-size: cover;
+#map-preview img, #map-detail img{
+  min-width: 100%;
 }
-#map-preview button {
-  position:fixed;
-  bottom: 60px;
-  right: 10px;
+.add-button {
+  position: fixed;
+  bottom: 0px;
+}
+.button.button-block, .button.button-full {
+  margin-bottom: 0;
 }
 .greenText {
   color: $calm;
