center image on page

--- a/www/components/maps/mapDetailModal.html
+++ b/www/components/maps/mapDetailModal.html
@@ -7,9 +7,8 @@
       </button>
     </div>
   </ion-header-bar>
-  <!-- <ion-content> -->
-  <ion-scroll delegate-handle="mapZoom" zooming="true" min-zoom="1" direction="xy" scrollbar-x="false" scrollbar-y="false" style="height: 1000px">
+  <ion-scroll class="parent" delegate-handle="mapZoom" zooming="true" min-zoom="1" direction="xy" scrollbar-x="false" scrollbar-y="false" style="height: 100vh">
     <img ng-src="{{vm.mapDetail.map_url}}" on-double-tap="vm.onDoubleTap()" alt="Map Preview"/>
-  </ion-content>
+  </ion-scroll>
 </ion-modal-view>
 
