--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -66,6 +66,7 @@ strong {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  height: 100vh;
 }
 .add-button {
   position: fixed;
