--- a/www/components/maps/mapDetailModal.html
+++ b/www/components/maps/mapDetailModal.html
@@ -7,7 +7,7 @@
       </button>
     </div>
   </ion-header-bar>
-  <ion-scroll class="parent" delegate-handle="mapZoom" zooming="true" min-zoom="1" direction="xy" scrollbar-x="false" scrollbar-y="false" style="height: 100vh">
+  <ion-scroll class="parent" delegate-handle="mapZoom" zooming="true" min-zoom="1" direction="xy" scrollbar-x="false" scrollbar-y="false" style="margin-top: 26px">
     <img ng-src="{{vm.mapDetail.map_url}}" on-double-tap="vm.onDoubleTap()" alt="Map Preview"/>
   </ion-scroll>
 </ion-modal-view>
