use city name instead of city number

--- a/www/components/maps/mapDetailModal.html
+++ b/www/components/maps/mapDetailModal.html
@@ -1,6 +1,6 @@
 <ion-modal-view id="map-detail">
   <ion-header-bar>
-    <h1 class="title">City {{vm.mapDetail.city_id}} - {{vm.mapDetail.name}}</h1>
+    <h1 class="title">{{vm.mapDetail.city}} - {{vm.mapDetail.name}}</h1>
     <div class="buttons">
       <button class="button button-clear modal-nav-button" ng-click="closeDetailModal()">
         <i class="icon ion-ios-close-empty"></i>
