--- a/www/components/maps/mapPreviewModal.html
+++ b/www/components/maps/mapPreviewModal.html
@@ -1,6 +1,6 @@
 <ion-modal-view id="map-preview">
   <ion-header-bar>
-    <h1 class="title">City {{vm.previewMap.city_id}} - {{vm.previewMap.name}}</h1>
+    <h1 class="title">{{vm.previewMap.city}} - {{vm.previewMap.name}}</h1>
     <div class="buttons">
       <button class="button button-clear modal-nav-button" ng-click="closePreviewModal()">
         <i class="icon ion-ios-close-empty"></i>
