--- a/www/components/maps/tab-maps.html
+++ b/www/components/maps/tab-maps.html
@@ -6,7 +6,7 @@
     </ion-item>
     <ion-item class="item-icon-right" ng-repeat="map in vm.user.maps" ng-click="openDetailModal(map)">
     <!-- <ion-item class="item-icon-right" ng-repeat="map in vm.user.maps" href="#/tab/maps/coronado"> -->
-      <h3>City {{map.city_id}} - {{map.name}}</h3>
+      <h3>{{map.city}} - {{map.name}}</h3>
       <p>San Diego County</p>
         <i class="icon ion-ios-arrow-down balanced"></i>
     </ion-item>
